<resources>
    <string name="app_name">El Dokan</string>
    <string name="app_title">El Dokan</string>
    <string name="facebook_app_id">537112297134777</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="ok">OK</string>
    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait while we check your credentials.</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="required">Required</string>
    <string name="signup_failed">Register Failed</string>
    <string name="signin_failed">Signin Failed</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_settings">App Settings</string>
    <string name="ads_settings">Ads Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="what_are_u_looking_for">What are you looking for ?</string>
    <string name="we_are">We are best at</string>
    <string name="different_fields">Different Fields</string>
    <string name="fast_turnaround">Fast Turnaround</string>
    <string name="prices">Prices</string>
    <string name="wide_range_produts">Wide Range Products</string>
    <string name="unique_products">Unique Products</string>
    <string name="stylish_items">Stylish Items</string>
    <string name="shop_now">Shop Now</string>
    <string name="up_to_80_off">Up to 80% OFF</string>
    <string name="up_to_75_off">Up to 75% OFF</string>
    <string name="up_to_50_off">Up to 50% OFF</string>
    <string name="up_to_70_off">Up to 70% OFF</string>
    <string name="up_to_90_off">Up to 90% OFF</string>
    <string name="Loading">Loading</string>
    <string name="best_value">Best Value</string>
    <string name="off">OFF</string>
    <string name="egypt_currency">LE.</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="clear">Clear All</string>
    <string name="apply">Apply</string>
    <string name="filters">Filters</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="quantity_label">Quantity</string>
    <string name="desc">Description</string>
    <string name="specifications">Specifications</string>
    <string name="offer_details">Offer Details</string>
    <string name="sold_by">Sold by</string>
    <string name="enjoy_hassle_free_returns_with_this_offer">Enjoy hassle free returns with this offer</string>
    <string name="seller_note">Seller note</string>
    <string name="country_of_origin_egypt">Country of Origin : Egypt</string>
    <string name="all_prices_include_vat">All prices include VAT</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy">Buy</string>
    <string name="collapse_text_label">Show Less</string>
    <string name="expand_text_label">Show More</string>
    <string name="details">Details</string>
    <string name="people_also_bought">People also bought</string>
    <string name="see_all">See All</string>
    <string name="sponsored">Sponsored</string>
    <string name="people_also_viewed">You may also like…</string>
    <string name="string_internet_connection_not_available">Internet Connection not Available</string>
    <string name="string_some_thing_wrong">Something went wrong.</string>
    <string name="internal_storage">Internal storage</string>
    <string name="chooser_title">Choose Files</string>
    <string name="reviews">Customer Reviews</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="just_now">Just Now</string>
    <string name="min_ago">a min ago</string>
    <string name="minites_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="today">Today</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="comment_text_hint">Enter your comment …</string>
    <string name="send_comment_button_label">Send</string>
    <string name="item_add_wishlist">Item Added To Wish List</string>
    <string name="item_rem_wishlist">Item Removed From Wish List</string>
    <string name="just_for_you">Recently Viewed</string>
    <string name="best_products">Best Offers</string>
    <string name="top_viewed">Top Viewed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cart">Cart</string>
    <string name="wish_list">My Wishlist</string>
    <string name="language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="my_wallet">My Wallet</string>
    <string name="cart_is_empty">Your cart is empty</string>
    <string name="price">Price :</string>
    <string name="qty">Qty :</string>
    <string name="lbl_item_price_quantity">%s x %d</string>
    <string name="price_with_currency">₹%.2f</string>
    <string name="remove_button">Remove</string>
    <string name="btn_Proceed">PROCEED (%s)</string>
    <string name="lbl_your_cart">Shopping cart</string>
    <string name="search">Search</string>
    <string name="lbl_view_cart">VIEW CART</string>
    <string name="cart_info_bar_data">%d Items | ₹%s</string>
    <string name="successfully_added_to_the_cart">Successfully Added To the cart</string>
    <string name="already_added_to_the_cart">This Product Already Added To The Cart</string>
    <string name="total_n_of_items">Total No. of Items :</string>
    <string name="btn_checkout_">CHECKOUT</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="add_a_new_address">Add a New Address</string>
    <string name="toast_message">Toast message</string>
    <string name="please_select_address">Select an Adress First</string>
    <string name="address">Address :</string>
    <string name="goverment">Goverment</string>
    <string name="city">City</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="please_fill_empty_field">Please Fill empty field</string>
    <string name="try_again">Try Again</string>
    <string name="back_to_shop">Back To Shop</string>
    <string name="thanks_for_shopping_with_us">Thanks for shopping with us!</string>
    <string name="your_order_number">Your order number is</string>
    <string name="view_order_details">View order details</string>
    <string name="something_happened">Something happened…</string>
    <string name="your_purchase_could_not_be_completed">Your purchase couldn\'t be completed</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="total">Total</string>
    <string name="sub_total">Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="cod_fee">COD Fee</string>
    <string name="estimated_vat">Estimatd VAT</string>
    <string name="ship_to">SHIP TO</string>
    <string name="review_your_order">REVIEW YOUR ORDER</string>
    <string name="please_order">PLACE ORDER</string>
    <string name="please_check_phone_number">Please Check Phone Number</string>
    <string name="enter_coupons_code_or_gift_card">Enter Coupon Code or Gift Card</string>
    <string name="vailed_code">Correct code Thank you for using our shop</string>
    <string name="incorect_code">Incorrect code .. try again</string>
    <string name="you_used_this_code_already">You already used this code</string>
    <string name="enter_owner">Enter Owner</string>
    <string name="clear_code">Clear</string>
    <string name="discount_off">50% OFF</string>
    <string name="egypt_code">+2</string>
    <string name="purchasing">Purchasing</string>
    <string name="order_time">Order Date</string>
    <string name="the_number_of_delivery_days">Delivery days</string>
    <string name="confirmed_1">تم الموافقة على طلبك بنجاح سيتم توصيل طلبك الى</string>
    <string name="confirmed_2">فى مدة اقصاها 3 ايام</string>
    <string name="packed_1">تم تجهيز طلبك بنجاح سيتواصل معك مندوب الشركة على الرقم</string>
    <string name="order_cost">اجمالى تكلفة الفاتورة</string>
    <string name="no_delivery_cost">غير متضمنة تكلفة الشحن</string>
    <string name="deliverd_1">تم توصيل طلبك بنجاح الى</string>
    <string name="deliverd_2">شكرا لتسوقكم معنا . فى حالة وجود اى عيب بالطلب الخاص بك يرجى التواصل مغ خدمة العملاء</string>
    <string name="customer_1">لمزيد من المعلومات يرجى التواصل مع خدمة العملاء الخاصة بنا</string>
    <string name="confirmed_order">تم الموافقة على طلبك</string>
    <string name="packed_order">جارى شحن الطلب</string>
    <string name="deliverd_order">تم توصيل الطلب بنجاح</string>
    <string name="pending_1">تم ارسال تفاصيل طلبك بنجاح الى مندوب التسويق .. سيتم مراجعة طلبك قبل الموافقة علية .. ثم سيتواصل معك مندوب التسويق لاعلام سيادتكم باى تفاصيل اخرى</string>
    <string name="pending_s">طلبك قيد المراجعة</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_remove_order">Are you sure you want to Cancel this Order?</string>
    <string name="your_order_has_been_cancled">تم الغاء الطلب الخاص بك</string>
    <string name="you_cancled_this_order">تم الغاء هذا الطلب بناءا على طلب سيادتكم فى حالة وجود اى استفسار يرجى التواصل مع خدمة العملاء الخاصة بنا</string>
    <string name="my_profile">My Profile</string>
    <string name="orders_history">Orders History</string>
    <string name="total_cost">Total Cost</string>
    <string name="we_provide">We Provide</string>
    <string name="free_return">Free Returns</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="save">Save</string>
    <string name="best_seller">Best Seller</string>
    <string name="done">DONE</string>
    <string name="availability">Availability:</string>
    <string name="Seller_Information">Seller Information</string>
    <string name="more">More</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="view_store">View Store</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="ProductAccessories">Frequently Bought Together</string>
    <string name="offer_ends">Limited Time Offer</string>
    <string name="forgot_password">Forgot Password ??</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="already_account">Already have an account?</string>
    <string name="add_billing_address"> ADD BILLING ADDRESS</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pincode">Pincode</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="cancel">Cancel</string>
    <string name="company">Company</string>
</resources>