<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <include layout="@layout/toolbar_simple" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <com.mohaa.dokan.Utils.TextViewMedium
                    android:id="@+id/tvActivityTitle"
                    style="@style/txt_black_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="start"
                    android:text="@string/add_billing_address"
                    android:textAlignment="viewStart"
                    android:textDirection="locale" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etFirstName"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/first_name"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etLastName"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/last_name"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etPincode"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/pincode"
                            android:inputType="number"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etAddress1"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/address1"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etAddress2"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/address2"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etCity"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/city"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etCompany"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/company"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:theme="@style/TextLabel1">

                        <com.mohaa.dokan.Utils.EditTextRegular
                            android:id="@+id/etPhoneNumber"
                            style="@style/txt_black_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="1"
                            android:gravity="start"
                            android:hint="@string/phone_number"
                            android:inputType="number"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textAlignment="viewStart"
                            android:textDirection="locale"
                            android:theme="@style/Theme.App.Base" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/llButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="5dp">

                        <com.mohaa.dokan.Utils.TextViewRegular
                            android:id="@+id/tvCancel"
                            style="@style/txt_white_big"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="@string/cancel" />

                        <com.mohaa.dokan.Utils.TextViewRegular
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <com.mohaa.dokan.Utils.TextViewRegular
                            android:id="@+id/tvSave"
                            style="@style/txt_white_big"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="@string/save" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
  


</androidx.coordinatorlayout.widget.CoordinatorLayout>
