<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Auth.LoginActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/appbarLayout"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_simple" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@+id/appbarLayout"
        android:gravity="center"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logo"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textDirection="locale"
                android:theme="@style/TextLabegray">

                <com.mohaa.dokan.Utils.EditTextRegular
                    android:id="@+id/email"
                    style="@style/txt_grey_big"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:drawablePadding="8dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textDirection="locale"
                    android:theme="@style/Theme.App.Base"
                    app:drawableStartCompat="@drawable/ic_user" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:theme="@style/TextLabegray">

                <com.mohaa.dokan.Utils.EditTextRegular
                    android:id="@+id/password"
                    style="@style/txt_grey_big"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:drawablePadding="8dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textDirection="locale"
                    android:theme="@style/Theme.App.Base"
                    app:drawableStartCompat="@drawable/ic_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="0.5">

                    <com.mohaa.dokan.Utils.TextViewLight
                        android:id="@+id/normal_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/login_now"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.5"
                    android:gravity="center">

                    <com.mohaa.dokan.Utils.TextViewLight
                        android:id="@+id/tvForgetPass"
                        style="@style/txt_color_primary_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="4dp"
                        android:background="@android:color/transparent"
                        android:text="@string/forgot_password" />
                </LinearLayout>

            </LinearLayout>



            <com.mohaa.dokan.Utils.TextViewLight
                android:id="@+id/register_now"
                style="@style/txt_color_primary_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:text="@string/new_user_register_now" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:gravity="center">

                    <com.mohaa.dokan.Utils.TextViewLight
                        style="@style/txt_black_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_sign_up_with" />

                </LinearLayout>
            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>